2009-05-19  Timothy Hatcher  <timothy@apple.com>

        Add a new private API method that will dispatch pending loads that have been scheduled
        because of recent DOM additions or style changes.

        <rdar://problem/6889218> REGRESSION: Some iChat transcript resources are not
        loaded because willSendRequest doesn't happen immediately

        Reviewed by Antti Koivisto.

        * WebView/WebView.mm:
        (-[WebView _dispatchPendingLoadRequests]): Call Loader::servePendingRequests().
        * WebView/WebViewPrivate.h: Added _dispatchPendingLoadRequests.

2009-05-18  Sam Weinig  <sam@webkit.org>

        <rdar://problem/6899044> Can't see Apple ad on nytimes.com unless I spoof the user agent
        
        Add user agent hack for pointroll.com.

        Reviewed by Steve Falkenburg.

        * WebView/WebView.mm:
        (-[WebView WebCore::_userAgentForURL:WebCore::]):

2009-05-16  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig and Dan Bernstein.

        Fix <rdar://problem/6889644>
        
        * Plugins/Hosted/NetscapePluginHostManager.mm:
        (WebKit::NetscapePluginHostManager::spawnPluginHost):

2009-05-16  Dan Bernstein  <mitz@apple.com>

        - revert an accidental change from r43802.

        * WebInspector/WebInspector.mm:

2009-05-16  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/6895347> Mouse wheeling in the QuickTime plug-in (incorrectly) scrolls the page
        
        Fix logic. The plug-in returns true if it handled the event.
        
        * Plugins/WebNetscapePluginView.mm:
        (-[WebNetscapePluginView sendEvent:isDrawRect:]):

2009-05-16  Dan Bernstein  <mitz@apple.com>

        Reviewed by Alexey Proskuryakov.

        - fix <rdar://problem/6873305> Two distinct characters are not displayed
          correctly with 2 of the font selections from the stickies widget

        * WebView/WebHTMLView.mm: