@@ -1,3 +1,13 @@
+2009-05-20  Darin Adler  <darin@apple.com>
+
+        Reviewed by John Sullivan.
+
+        <rdar://problem/4023899> Shift-Tab skips key views in toolbar in Safari, although Tab
+        iterates through them properly
+
+        * WebView/WebView.mm:
+        (-[WebView previousValidKeyView]): Work around a bug in -[NSView previousValidKeyView].
+
 2009-05-19  Timothy Hatcher  <timothy@apple.com>
 
         Add a new private API method that will dispatch pending loads that have been scheduled
